// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with elevations 1`] = `
.c0 {
  box-shadow: none;
}

<div
  class="c0"
  elevation="0"
>
  Hello world
</div>
`;

exports[`it works with elevations 2`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

<div
  class="c0"
  elevation="1"
>
  Hello world
</div>
`;

exports[`it works with elevations 3`] = `
.c0 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

<div
  class="c0"
  elevation="2"
>
  Hello world
</div>
`;

exports[`it works with elevations 4`] = `
.c0 {
  box-shadow: 0 2px 5px rgba(0,0,0,0.16),-10px 15px 15px rgba(0,0,0,0.03),10px 0px 15px rgba(0,0,0,0.03);
}

<div
  class="c0"
  elevation="3"
>
  Hello world
</div>
`;

exports[`it works with elevations 5`] = `
.c0 {
  box-shadow: 0 2px 6px rgba(0,0,0,0.18),-15px 20px 20px rgba(0,0,0,0.04),15px -5px 20px rgba(0,0,0,0.04);
}

<div
  class="c0"
  elevation="4"
>
  Hello world
</div>
`;
